--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,6 @@ framework = arduino
 
 lib_deps= EmonLib
         mobizt/Firebase Arduino Client Library for ESP8266 and ESP32 @ ^2.5.1
+        wnatth3/WiFiManager @ ^2.0.15-rc.1
 
 monitor_speed= 9600
